--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -3,6 +3,6 @@ steps:
     args: ["install", "github.com/ksimir/gcp-cd-codelab"]
     env: ["PROJECT_ROOT=github.com/ksimir/gcp-cd-codelab"]
   - name: "gcr.io/cloud-builders/docker"
-    args: ["build", "-t", "gcr.io/samirh-sandbox/gcp-cd-codelab:$REVISION_ID", "-f", "Dockerfile", "."]
+    args: ["build", "-t", "asia.gcr.io/samirh-sandbox/gcp-cd-codelab:$REVISION_ID", "-f", "Dockerfile", "."]
 images:
   - "asia.gcr.io/samirh-sandbox/gcp-cd-codelab:$REVISION_ID"
